Rutas asignar cursos, materia y profesor

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-# Entorno virtual
-venv/
-
-# Archivos Python compilados
-__pycache__/
-*.pyc
-*.pyo
-
-# Archivos de entorno
-.env
-
-# Archivos temporales
-*.log
-
-# Config de editores
-.vscode/
-.idea/
+venv/\n__pycache__/\ndb.sqlite3\n*.pyc\n.env\n*.log\n*.sqlite3
